--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "db": "json-server --watch db.json --port 3030"
+    "db": "json-server --watch db.json --host 0.0.0.0 --port 3030"
   },
   "eslintConfig": {
     "extends": [
